@@ -17,6 +17,7 @@ munin (work)
 	* Replaced notification system. Munin can now send warning/critical
 	  messages to whatever process/file that is needed.
 	* Removed the munin-nagios program, as it is no longer needed.
+	* Use column headers for min/max/cur/avg if label is too long.
 
   - Munin-node:
     * Added module Munin::Plugin::SNMP, a Net::SNMP sublcass for plugins.
